<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:virosoft="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background2"
    tools:context="com.squareplaces.squareplaces.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/create_account_edittext_style"
                android:id="@+id/email"
                android:inputType="textEmailAddress" />

            <EditText
                style="@style/create_account_edittext_style"
                android:id="@+id/password1"
                android:inputType="textPassword"/>

            <EditText
                style="@style/create_account_edittext_style"
                android:id="@+id/password2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/signin_button"
                android:text="@string/action_sign_up"
                android:textSize="18sp"
                android:textColor="@color/text_color" />

            <com.squareplaces.squareplaces.TypefaceTextView
                android:id="@+id/textview_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/create_account_agreement"
                android:textSize="13sp"
                android:textColor="@color/text_color"
                virosoft:typeface="@string/font_regular"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
